# study

./: pyproject.toml
17_class_/: desafio.db  exemplo_01.py  exemplo_02.py  pyproject.toml  sqlite.db
18_class/: alpha.py  exemplo_00.py  pyproject.toml
19_class/: pyproject.toml
8_class/: README1.md  decorator_time.py  etl.py  pipeline.py  pyproject.toml
classes_s3/: pyproject.toml  start.py
project_one_billion_rows/: etl.py  main.py  vendas.csv
