[tool.poetry]
name = "18-class"
version = "0.1.0"
description = ""
authors = ["Victor <vitor.passos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
