[tool.poetry]
name = "8-class"
version = "0.1.0"
description = ""
authors = ["Victor <vitor.passos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.22.1"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"
loguru = "^0.7.3"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
